# Stereo-Reconstruction

./: README.md  helper.cpp  include.h  kitti_kit.cpp  rectify.cpp  simulation.cpp  test.cpp  undistort.cpp
Project: stereo reconstruction/: CMakeLists.txt  FindEssentialMatrix.cpp  README.md  RecoverRT.cpp  Rectify_KITTI.cpp  bundle_adjustment.cpp  helper.cpp  include.h  kitti_kit.cpp  log.txt  main.cpp  matching.cpp  matching_dense.cpp  matching_sparse.cpp  orb.cpp  pointcloud.cpp  rectify.cpp  sift.cpp  simulation.cpp  test.cpp  transformation.py  undistort.cpp
Project: stereo reconstruction/evaluation/: evaluation_sparse_matching.py
Project: stereo reconstruction/evaluation/evaluation_dense_matching/: disp_error_map.m  disp_read.m
evaluation/evaluation_dense_matching/: Estimate.m  disp_error.m  disp_error_image.m  error_colormap.m
ex1/FreeImage/__MACOSX/: ._FreeImage
ex1/FreeImage/__MACOSX/FreeImage/x64/: ._FreeImage.h
ex1/src/: Eigen.h  main.cpp
ex2/src/: CMakeLists.txt  MarchingCubes.h  main.cpp
ex3/src/: ProcrustesAligner.h  bunny_procrustes.off  main.cpp
ex4/results/: output_dragon.txt  output_surface.txt
ex4/src/: CMakeLists.txt  gaussian.cpp
ex5/src/: PointCloud.h
exe0/exercise_0_src/cmake-tutorial/: CMakeLists.txt
exe1/exercise_1_src/exercise_1_src/: CMakeLists.txt  main.cpp
exe2/exercise_2_src/exercise_2_src/: ImplicitSurface.h
exe3/exercise_3_src/: CMakeLists.txt  ProcrustesAligner.h
exe4/exercise_4_src/exercise_4_src/: Makefile  cmake_install.cmake  dragon  dragon.cpp  gaussian  surface  surface.cpp
exe4/results/: output_gaussian.txt
exe5/exercise_05_src/: CMakeLists.txt  ICPOptimizer.h  Makefile  cmake_install.cmake  main.cpp
